== 0.7.4

== 0.7.3

* Enhancements
  * Call Creator is now listed in the participant timeline and on the call show page
  * Calls can now be filtered and sorted by response

== 0.7.2

* Bug Fix
  * Prescreens, Mailings, Calls, Evaluations, and Visits no longer display if the associated patient has been deleted

== 0.7.1

* Bug Fix
  * Fix Registration page to use new Contour login attributes

== 0.7.0

* Enhancements
  * Using Contour 1.0.0 with Twitter-Bootstrap CSS and JS

* Bug Fix
  * Spinning icon no longer shows indefinitely on participants without subject code

== 0.6.1

* Enhancements
  * Calls can now be filtered by the user making the call
  * Mailings can be filtered to exclude any mailings that have participants ineligibile from a call, evaluation, or prescreen
  * Dates can now be entered in either mm/dd/yy or mm/dd/yyyy format

* Bug Fix
  * Prescreens now require a visit date and time in order to display correctly on the participant timeline

== 0.6.0

* Enhancements
  * Call comments are now also added to a Task Tracker group description
  * Choices can now be set to only show specific fields for different call types
  * Choices can now be set to only show specific fields for different evaluation administration types
  * Task Tracker stickies are now integrated on the Patient Timeline
  * Update to Rails 3.2.3

* Bug Fix
  * Fixed minor graphical menu bug for subject handlers

== 0.5.0

* Enhancements
  * Call creation integration with Task Tracker Templates
    * Selecting templates displays the stickies that will be generated
  * Mailings
    * Bulk Import from spreadsheet now available
  * Prescreens
    * Bulk Import moved to its own page, now availabe as a submenu item under Prescreens
    * Can be filtered by patients who have not had a call
  * Date filters added for Prescreens, Mailings, Calls, Evaluations, and Visits
  * Doctors, Clinics, and Choices GUI Updated